# Korenine

./: .gitignore  Cargo.toml  README.md  config.py  database.db  driver.py  example_config.py  lights.sh  main.py  manage_keys.py  positions.csv  pyproject.toml  shell.nix  test_driver.py  udp2push.py
config/: example_config.py  example_config.toml
data/: database.db-shm  database.db-wal  positions.csv
driver/: driver.py  test.py  udp2push.py
scripts/: calibration.py  lights.sh  rotatate_lights.py  setup_jelka.yml
