[package]
name = "korenine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "korenine"
path = "src/bin/korenine.rs"

[[bin]]
name = "driver"
path = "src/bin/driver.rs"

[dependencies]
# Shared dependencies
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = { version = "0.27", features = ["fs", "user"] }
anyhow = "1.0"
config = "0.14"
chrono = { version = "0.4", features = ["serde"] }

# Manager specific
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }
bollard = { version = "0.15", features = ["chrono"] }
uuid = { version = "1.7", features = ["v4"] }

# Driver specific
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
http = "1.0"
