[tool.poetry]
name = "korenine"
version = "0.1.0"
description = "Korenine is a Python system to run animations on Christmas tree hardware."
authors = ["jelka"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
docker = "^7.1.0"
fastapi = {extras = ["standard"], version = "^0.115.4"}
sqlmodel = "^0.0.22"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
